# egisz-monitor-corp

./: .cursorrules  .dockerignore  .egisz-corp-port-forward.pids  .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  start.ps1
config/: egisz_corp.example.yaml  egisz_corp.yaml  egisz_monitor.example.yaml  egisz_monitor.yaml
data/: nsi1520_confluence_export.txt
docs/: BI_EGISZ_INFOKLINIKA_AUDIT.md  DOCKER_GORDON_PROMPT.md  DOCUMENTATION_STYLE.md  GORDON2_XML_PROMPT.md  INTEGRATION_AUDIT.md  KUBERNETES_LOCAL.md  METABASE.md  POWERBI.md  SYNC_DIAGNOSTICS.md
egisz_monitor_corp/: __init__.py  __main__.py  cli.py  config_app.py  config_loader.py  error_model.py  etl.py  fb_client.py  k8s_cronjob.py  metabase_bundle.py  metabase_export.py  nsi1520_kind_names.json  nsi1520_kind_names_supplemental.json  parser.py  pg_cli_backup.py  pg_warehouse.py  semd_dictionary.py  sql_util.py  sync_routes.py
k8s/: README.md  conf-ui.yaml  egisz_monitor.local.yaml  etl-cron.yaml  metabase-admin-secret.example.yaml  metabase.yaml  web.yaml
metabase/: Dockerfile  entrypoint.sh  export_dashboards_from_api.py  force-k8s-mb-image.ps1  provision-local.ps1  provision.sh  setup-dashboards.sh  smoke-metabase-ui.sh  verify-corp-stack.sh
metabase_dashboards/: 01_operational.json  02_service.json  03_documents_no_response.json  03_errors.json  04_documents_no_response.json  04_quality_and_errors.json  05_executive.json  05_trends.json  06_quality.json  06_semd_archive.json  07_errors_deep.json  08_pending_agg.json  09_executive.json  README.md  (+3 more)
(+77 files in other folders)
