[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "egisz-monitor-corp"
version = "0.2.0"
description = "Python ETL: Firebird EXCHANGELOG → PostgreSQL, Airflow, Metabase-facing DWH"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "firebird-driver>=1.10",
    "psycopg2-binary>=2.9",
    "Flask>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
egisz-corp = "egisz_monitor_corp.cli:main_entry"

[tool.setuptools.packages.find]
where = ["."]
include = ["egisz_monitor_corp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
